<resources>
    <string name="app_name">Savvy HRMS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_change_password">Change Password</string>
    <string name="home_page">Home</string>
    <string name="drawer_ipConfig">IP Setting</string>
    <string name="nav_item_home">Dashboard</string>
    <string name="nav_item_friends">Time Table</string>
    <string name="nav_item_notifications">Attendance</string>
    <string name="nav_item_academics">Academics</string>
    <string name="nav_item_notices">Notices</string>
    <string name="nav_item_calender">Calender</string>
    <string name="nav_item_feedback">Feedbacks</string>
    <string name="nav_item_mail">Messages</string>
    <string name="nav_item_profile">Profile</string>
    <string name="title_activity_need_help">NeedHelpActivity</string>
    <string name="font_name">arial.ttf</string>
    <string name="font_name_light">Nexa_Light.otf</string>
    <string name="font_name_bold">Nexa_Bold.otf</string>
    <string name="over_time_date">Over Time Date</string>
    <string name="over_from_time">Over Time From</string>
    <string name="over_to_time">Over Time To</string>
    <string name="pick_date">Punch Date</string>
    <string name="please_wait_msg">Please wait...</string>
    <string name="forget_submit">Submit</string>
    <string name="forget_cancle">Cancel</string>
    <string name="forget_title">Forget Password</string>
    <string name="forget_subtitle">Please enter emailid</string>
    <string name="comp_off_balance">Accrue Comp-off Balance Against</string>
    <string name="reason">Reason</string>
    <string name="pickdate">Pick Date</string>
    <string name="selectdate">Select Date</string>
    <string name="remarks">Remarks</string>
    <string name="send_request">Send Request</string>
    <string name="reset">Reset</string>
    <string name="fromdate">From Date</string>
    <string name="todate">To Date</string>
    <string name="comp_off_history">Comp-off Accrual History</string>
    <string name="compareDate">From Date should be less than or equal To Date!</string>
    <string name="By_Employee">By Employee</string>
    <string name="no_of_lta">No of LTA Claimed in Current Block :</string>
    <string name="year_of_lta">Year of Last LTA Claimed in Current Block :</string>
    <string name="available_balance">Available Balance :</string>
    <string name="yearBlock">Year Block</string>
    <string name="mocklocation">Mock Location Detected</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_profile</item>
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
        <item>@string/nav_item_academics</item>
        <item>@string/nav_item_notices</item>
        <item>@string/nav_item_calender</item>
        <item>@string/nav_item_feedback</item>
        <item>@string/nav_item_mail</item>
    </string-array>
    <string-array name="country_names">
        <item>\u00A0\u00A0+1 United States"</item>
        <item>+45 Denmark</item>
        <item>+46 Sweden</item>
        <item>+47 Norway</item>
    </string-array>
    <string-array name="country_codes">
        <item>1</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
    </string-array>
    <string-array name="country_flags">
        <item>USA</item>
        <item>America</item>
        <item>sweden</item>
        <item>norway</item>
    </string-array>
    <string name="title_activity_time_table_info">Timetable</string>
    <string name="title_activity_attendance_info">Attendance</string>
    <string name="title_activity_calender_info">CalenderInfoActivity</string>
    <string name="title_activity_result">Results</string>
    <string name="title_activity_academics_ask_doubts">AcademicsAskDoubtsActivity</string>
    <string name="title_activity_hariom">HariomActivity</string>
    <string name="title_activity_academics_create_ask_doubt">AcademicsCreateAskDoubtActivity
    </string>
    <string name="title_activity_academics_notes">AcademicsNotesActivity</string>
    <string name="title_activity_academics_videos">AcademicsVideosActivity</string>
    <string name="title_activity_topic">Topics</string>
    <string name="title_activity_mail_info">MailInfoActivity</string>
    <string name="title_activity_guest_login">GuestLoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_sign_up_new">SignUpNewActivity</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="red_star">Hello <font color='#EE0000'>*</font></string>
    <string name="some_text">Font color is <font color="#EE0000">red</font></string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_sales_force_map">Map</string>
    <string name="start_location_tracking">Start Location Tracking</string>
    <string name="pick_date1">Pick Date</string>
    <string name="short_leave_date">Short Leave Date</string>
    <string name="late_coming">Late Coming</string>
    <string name="early_going">Early Going</string>
    <string name="short_leave_type">Short Leave Type</string>
    <string name="submit">Submit</string>
    <string name="enter_reason_here">Enter reason here</string>
    <string name="comment">Comment :</string>
    <string name="punch_date">Punch Date :</string>
    <string name="punch_time">Punch Time :</string>
</resources>