<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/border_custom_new"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <com.savvy.hrmsnewapp.customwidgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_leave_date"
                android:textColor="#000000"
                android:textSize="13sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/edt_shortDate"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="10dp"
                android:layout_weight="5.5"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:background="@drawable/border_custom"
                android:gravity="center"
                android:hint="@string/pick_date1"
                android:paddingLeft="5sp"
                android:paddingRight="10dp"
                android:textColor="@color/my_custom_color"
                android:textColorHint="@color/color_gray"
                android:textSize="@dimen/text_size" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp">

            <RadioButton
                android:id="@+id/lateRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/late_coming"
                android:textSize="13sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/earlyRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/lateRadioButton"
                android:layout_alignRight="@+id/lateRadioButton"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/early_going"
                android:textSize="13sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.savvy.hrmsnewapp.customwidgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start|top"
                android:text="@string/short_leave_type"
                android:textColor="#000000"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/shortLeave_Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp" />
        </LinearLayout>

        <com.savvy.hrmsnewapp.customwidgets.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reason"
            android:textColor="#000000"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_shortLeave_Reason"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/border_custom"
            android:gravity="top|start"
            android:hint="@string/enter_reason_here"
            android:inputType="textMultiLine"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:textSize="13sp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/short_Leave_SubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_border_cancel"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>