<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    android:orientation="vertical"
    android:background="@drawable/layout_round_border"
    android:padding="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punch_date"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_punch_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_5sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punch_time"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_punch_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_5sdp"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</LinearLayout>