<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BaseTrackMeActivity">
    <LinearLayout
        android:id="@+id/tolbar"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp">

            <RelativeLayout
                android:id="@+id/rl_tracking_relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/tv_tracking_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Track My Location"
                    android:textColor="@color/white"
                    android:background="@color/color_blue"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textStyle="bold"
                    />

            </RelativeLayout>
            <com.savvy.hrmsnewapp.customwidgets.CustomTextView
                android:id="@+id/track_location_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="Track My Location"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dip"
                android:textStyle="bold"
                app:font="@string/font_name_bold" />

            <com.savvy.hrmsnewapp.customwidgets.CustomTextView
                android:id="@+id/tvTitleStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/track_location_heading"
                android:layout_marginTop="16dp"
                android:text="@string/start_location_tracking"
                android:textColor="@color/my_custom_color_1"
                android:textSize="14sp"
                app:font="@string/font_name_light" />

            <Button
                android:id="@+id/btn_startService"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/tvTitleStart"
                android:layout_marginTop="10dip"
                android:background="@drawable/button_border"
                android:text="Start Location Tracking"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.savvy.hrmsnewapp.customwidgets.CustomTextView
                android:id="@+id/tvTitleStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_startService"
                android:layout_marginTop="16dp"
                android:text="@string/start_location_tracking"
                android:textColor="@color/my_custom_color_1"
                android:textSize="14sp"
                app:font="@string/font_name_light" />

            <Button
                android:id="@+id/btn_stop_service"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/tvTitleStop"
                android:layout_marginTop="10dip"
                android:background="@drawable/button_border"
                android:text="Stop Location Tracking"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CurrentTrackingStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_stop_service"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="#ee0000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_location_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/CurrentTrackingStatus"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:textColor="#F8000000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="visible" />

        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>